--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ Assets/Standard Assets/
 Assets/Packages/
 Assets/Blends and FBX/
 Assets/World Objects/
-Assets/Weapons/
+Assets/Weapons/Dirty Old Hoe/
