--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ sysinfo.txt
 *.apk
 *.unitypackage
 Assets/Standard Assets/
-Assets/Packages/
+Assets/Import Packages/
 Assets/Blends and FBX/
 Assets/World Objects/
 Assets/Weapons/Dirty Old Hoe/
