Adjustable weapon grip

--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,4 @@ sysinfo.txt
 Assets/Standard Assets/
 Assets/Import Packages/
 Assets/Blends and FBX/
-Assets/World Objects/
-Assets/Weapons/Dirty Old Hoe/
+Assets/Environment/
