Import mechanim animation pack

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Assets/Standard Assets/
 Assets/Import Packages/
 Assets/Blends and FBX/
 Assets/Environment/
+Assets/RPG Character Animation Pack/
