Untangling standard assets

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,28 @@ Assets/Import Packages/
 Assets/Blends and FBX/
 Assets/Environment/
 Assets/RPG Character Animation Pack/
+Assets/Characters/Animations/2Hand-Axe/
+Assets/Characters/Animations/2Hand-Bow/
+Assets/Characters/Animations/2Hand-Club/
+Assets/Characters/Animations/2Hand-Crossbow/
+Assets/Characters/Animations/2Hand-Spear/
+Assets/Characters/Animations/2Hand-Sword/
+Assets/Characters/Animations/Armed/
+Assets/Characters/Animations/Climb-Ladder/
+Assets/Characters/Animations/Dagger/
+Assets/Characters/Animations/Item/
+Assets/Characters/Animations/Ledge/
+Assets/Characters/Animations/Mace/
+Assets/Characters/Animations/Pistol/
+Assets/Characters/Animations/Relax/
+Assets/Characters/Animations/Shield/
+Assets/Characters/Animations/Shooting/
+Assets/Characters/Animations/Spear/
+Assets/Characters/Animations/Staff/
+Assets/Characters/Animations/Swimming/
+Assets/Characters/Animations/Sword/
+Assets/Characters/Animations/Unarmed/
+Assets/Weapons/Other/
+Assets/Characters/ThirdPersonCharacter/
+Assets/Weapons/Ranged/Ball Gun/RollerBall/Models/RollerBall.fbx
+Assets/Characters/Animations/RPG-Character-Animation-Controller.controller
