Trigger player hit animation

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ Assets/Weapons/Other/
 Assets/Characters/ThirdPersonCharacter/
 Assets/Weapons/Ranged/Ball Gun/RollerBall/Models/RollerBall.fbx
 Assets/Characters/Animations/RPG-Character-Animation-Controller.controller
+Assets/Characters/Models/
