Triggering audio on radius

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ Assets/Characters/ThirdPersonCharacter/
 Assets/Weapons/Ranged/Ball Gun/RollerBall/Models/RollerBall.fbx
 Assets/Characters/Animations/RPG-Character-Animation-Controller.controller
 Assets/Characters/Models/
+Assets/Core/alarm_siren_loop_10.wav
