Our first dialogue

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ Assets/Weapons/Ranged/Ball Gun/RollerBall/Models/RollerBall.fbx
 Assets/Characters/Animations/RPG-Character-Animation-Controller.controller
 Assets/Characters/Models/
 Assets/Core/alarm_siren_loop_10.wav
+Assets/Core/209162__lukesharples__argargarhh.wav
+Assets/Core/429037__theuncertainman__how-can-i-help-npc-british-male.wav
+Assets/Core/429038__theuncertainman__greetings-npc-british-male.wav
