Placing props (No props yet)

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ Assets/Core/alarm_siren_loop_10.wav
 Assets/Core/209162__lukesharples__argargarhh.wav
 Assets/Core/429037__theuncertainman__how-can-i-help-npc-british-male.wav
 Assets/Core/429038__theuncertainman__greetings-npc-british-male.wav
+Assets/Weapons/Components/Dirt Old Hoe.fbx
+Assets/Weapons/Components/Simple Arrow.fbx
+Assets/Weapons/Components/Simple Bow.fbx
+Assets/Weapons/Components/Sword.fbx
