Changing your skybox

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ Assets/Weapons/Components/Dirt Old Hoe.fbx
 Assets/Weapons/Components/Simple Arrow.fbx
 Assets/Weapons/Components/Simple Bow.fbx
 Assets/Weapons/Components/Sword.fbx
+Assets/Fantasy Skybox FREE/
