Player damage and death sounds

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Assets/Weapons/Components/Simple Arrow.fbx
 Assets/Weapons/Components/Simple Bow.fbx
 Assets/Weapons/Components/Sword.fbx
 Assets/Fantasy Skybox FREE/
+Assets/Characters/Player/Sounds/
