Centralize and improve audio clips

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ Assets/Fantasy Skybox FREE/
 Assets/Characters/Player/Sounds/
 Assets/Asset Packs - For Students/
 Assets/PolygonDungeon/
+Assets/Characters/Special Abilities/might.wav
+Assets/Characters/Special Abilities/Area Effect/thornhit.wav
+Assets/Characters/Special Abilities/Power Attack/zeal.wav
+Assets/Characters/Special Abilities/Self Heal/prayer.wav
