--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Assets/Characters/Special Abilities/Area Effect/thornhit.wav
 Assets/Characters/Special Abilities/Power Attack/zeal.wav
 Assets/Characters/Special Abilities/Self Heal/prayer.wav
 Assets/Characters/Special Abilities/Power Attack/one hand swing large15.wav
+Assets/Weapons/smallmetalweapon.wav
