Added new level (No enemies)

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ Assets/Import Packages/
 Assets/Environment/
 Assets/Characters/Animations/
 Assets/Asset Packs - For Students/
+Assets/Asset Packs - Not For Commercial Use/
 Assets/PolygonDungeon/
 
 # Whitelist .cs Extensions
