--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ Assets/Characters/Animations/
 Assets/Asset Packs - For Students/
 Assets/Asset Packs - Not For Commercial Use/
 Assets/PolygonDungeon/
+Assets/Characters/Enemies/GameDev/
 
 # Whitelist .cs Extensions
 !Assets/**/*.cs
